[package]
name = "onetimer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
config = "0.13.3"
log = "0.4.17"
rand = "0.8.5"
serde = "1.0.163"
serde_json = "1.0.96"
simplelog = "0.12.1"
sqlite = "0.30.4"
time = "0.3.21"
tiny_http = "0.12.0"
